Refactor setting screenshot test engine params
Bug: n/a
Test: ScreenshotTest
Change-Id: I68fab51c07b197915f056b6e13eade861b504e5b