@@ -16,6 +16,8 @@
 
 package com.android.compose.screenshot.tasks
 
+import org.gradle.api.GradleException
+import org.gradle.api.JavaVersion
 import org.gradle.api.NonExtensible
 import org.gradle.api.file.ConfigurableFileCollection
 import org.gradle.api.file.Directory
@@ -33,6 +35,11 @@ import org.gradle.api.tasks.Optional
 import org.gradle.api.tasks.OutputDirectory
 import org.gradle.api.tasks.PathSensitive
 import org.gradle.api.tasks.PathSensitivity
+import java.io.File
+import kotlin.collections.filterNot
+import kotlin.collections.joinToString
+import kotlin.collections.map
+import kotlin.collections.plus
 
 /**
  * Provides all the input properties needed to run the Screenshot test engine.
@@ -101,4 +108,96 @@ interface PreviewScreenshotTestEngineInput {
 
     @get:OutputDirectory
     val diffImageOutputDir: DirectoryProperty
+
+    @get:OutputDirectory
+    val junitXmlOutputDirectory: DirectoryProperty
+}
+
+fun PreviewScreenshotTestEngineInput.copyJvmArgsTo(addJvmArgFunc: (String) -> Unit) {
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+        // Required by LayoutLib.
+        addJvmArgFunc("-Djava.security.manager=allow")
+    }
+    addJvmArgFunc("-Dlayoutlib.thread.profile.slow-rendering.enable=false")
+
+    addJvmArgFunc(toJvmTestEngineParam(
+        "screenshotTestDirectory",
+        testProjectClassDirs.get()
+            .joinToString(File.pathSeparator) { it.asFile.absolutePath }))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "screenshotTestJars",
+        testProjectJars.get()
+            .joinToString(File.pathSeparator) { it.asFile.absolutePath }))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "mainDirectory",
+        mainProjectClassDirs.get()
+            .joinToString(File.pathSeparator) { it.asFile.absolutePath }))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "mainJars",
+        mainProjectJars.get()
+            .joinToString(File.pathSeparator) { it.asFile.absolutePath }))
+    val testProjectJarSet =
+        setOf(
+            *testProjectJars.get()
+                .map { it.asFile.absolutePath }
+                .toTypedArray()
+        )
+    addJvmArgFunc(toJvmTestEngineParam(
+        "dependencyJars",
+        testRuntimeJars.get()
+            .filterNot { it.asFile.absolutePath in testProjectJarSet }
+            .joinToString(File.pathSeparator) { it.asFile.absolutePath }))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "previewImageOutputDir",
+        previewImageOutputDir.get().asFile.absolutePath))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "previewDiffImageOutputDir",
+        diffImageOutputDir.get().asFile.absolutePath))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "referenceImageDir",
+        referenceImageDir.get().asFile.absolutePath))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "Renderer.fontsPath",
+        sdkFontsDir.orNull?.asFile?.absolutePath ?: ""))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "Renderer.resourceApkPath",
+        resourceApkFile.orNull?.asFile?.absolutePath ?: ""))
+    addJvmArgFunc(toJvmTestEngineParam("Renderer.namespace", namespace.get()))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "Renderer.mainAllClassPath",
+        (mainRuntimeClassDirs.get() + mainRuntimeJars.get())
+            .joinToString(File.pathSeparator) { it.asFile.absolutePath }))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "Renderer.mainProjectClassPath",
+        (mainProjectClassDirs.get() + mainProjectJars.get())
+            .joinToString(File.pathSeparator) { it.asFile.absolutePath }))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "Renderer.screenshotAllClassPath",
+        (testRuntimeClassDirs.get() + testRuntimeJars.get())
+            .joinToString(File.pathSeparator) { it.asFile.absolutePath }))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "Renderer.screenshotProjectClassPath",
+        (testProjectClassDirs.get() + testProjectJars.get())
+            .joinToString(File.pathSeparator) { it.asFile.absolutePath }))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "Renderer.layoutlibDataDir",
+        layoutlibDataDir.singleFile.absolutePath))
+    addJvmArgFunc(toJvmTestEngineParam(
+        "XmlReportInput.outputDirectory",
+        junitXmlOutputDirectory.get().asFile.absolutePath))
+
+    threshold.orNull?.let {
+        validateFloat(it)
+        addJvmArgFunc(toJvmTestEngineParam("ImageDiffer.threshold", it.toString()))
+    }
+}
+
+private fun validateFloat(value: Float) {
+    if (value < 0 || value > 1) {
+        throw GradleException("Invalid threshold provided. Please provide a float value between 0.0 and 1.0")
+    }
+}
+
+private fun toJvmTestEngineParam(key: String, value: String): String {
+    return "-DPreviewScreenshotTestEngineInput.${key}=${value}"
 }
